<resources>
    <string name="app_name">BondoMan</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_title">Scan</string>
    <string name="capture_image">Capture image</string>
    <string name="gallery_picker">get from gallery</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Settings</string>
    <string name="download_button">Download Transaction</string>
    <string name="send_button">Send transactions</string>
    <string name="randomize_button">Randomize Button</string>
    <string name="logoutButton">Logout</string>
    <string name="title_scan">Scan</string>
    <string name="save">Save</string>
    <string name="select">Pilih Kategori</string>
    <string name="retake">Retake</string>
    <string name="done">Done</string>
    <string name="title_graph">Graph</string>
    <string name="bottom_dialogue_delete">Are you sure you want to delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="flipImage">flip image</string>
    <string name="retake_image">retake image</string>
    <string name="login_button">Login</string>
    <string name="loading_login">Please wait...</string>
    <string name="twibbon">twibbon</string>
    <string name="login_to">"Login to "</string>
    <string name="bondoman">Bondoman</string>
    <string name="login_text">Enter your registered account</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="edit_button_content_desc">edit transaction</string>
    <string name="delete_transaction_button_desc">delete transaction</string>
    <string name="location_button_desc">open google maps</string>
    <string name="add_transaction_button_desc">add transaction</string>
    <string name="search_current_location_button">search current location</string>
</resources>