<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/transaction"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_twibbon"
        android:icon="@drawable/twibbon"
        android:title="Twibbon" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/chart"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/setting_alt_line"
        android:title="@string/title_settings" />

</menu>