<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bottom_dialogue_delete"
        android:textAlignment="center"
        android:textColor="?textFillColor"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bttnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/cancel"
            android:textColor="?colorPrimary"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/bttnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/delete"
            android:textColor="?colorAccent"
            app:cornerRadius="20dp" />
    </LinearLayout>

</LinearLayout>