<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="31dp"
        android:orientation="vertical"
        app:flow_horizontalGap="20dp"
        app:flow_verticalGap="20dp"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/downloadButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/download_button"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:icon="@drawable/resource_import"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/send_button"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:icon="@drawable/send"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/randomizeButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/randomize_button"
            android:textAlignment="textStart"

            android:textColor="@color/white"
            app:icon="@drawable/sort_random"
            app:cornerRadius="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:includeFontPadding="false"
        android:paddingHorizontal="40dp"
        android:text="@string/logoutButton"
        android:background="@drawable/button_transparent"
        android:textColor="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>