<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TwibbonFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="552dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="43dp"
            android:foregroundGravity="bottom">

        </androidx.camera.view.PreviewView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/twibbon"
            android:layout_gravity="bottom|fill_horizontal"
            android:src="@drawable/twibbonpic" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/captureButton"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/transparent"

        android:contentDescription="@string/capture_image"
        android:scaleType="fitCenter"
        android:src="@drawable/button_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ImageButton
        android:id="@+id/retakeButton"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/retake_image"
        android:scaleType="fitCenter"
        android:src="@drawable/button_retake"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <ImageButton
        android:id="@+id/flipButton"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/flipImage"
        android:src="@drawable/button_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>