<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ScanFragment">

    <TextView
        android:id="@+id/debugOutputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No connection available"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="23dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="@+id/previewView"
        app:layout_constraintStart_toStartOf="@+id/previewView"
        app:layout_constraintTop_toTopOf="@+id/previewView"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="91dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="selected photo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="@+id/previewView"
        app:layout_constraintStart_toStartOf="@+id/previewView"
        app:layout_constraintTop_toTopOf="@+id/previewView"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/captureButton"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/capture_image"

        android:scaleType="fitCenter"
        android:src="@drawable/button_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView"
        tools:visibility="gone" />

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.camera.view.PreviewView>

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/gallery_picker"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/captureButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView"
        tools:visibility="gone" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/retakeButton"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:text="@string/retake"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/P1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doneButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:text="@string/done"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:backgroundTint="@color/P1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/retakeButton"
        app:layout_constraintTop_toBottomOf="@+id/previewView" />

</androidx.constraintlayout.widget.ConstraintLayout>